2001-11-22  TSUCHIYA Masatoshi  <tsuchiya@namazu.org>

	* w3m.el (top, w3m-about): Change the URL of w3m's official page.

2001-11-21  Hideyuki SHIRAI  <shirai@meadowy.org>

	* w3m.el (w3m-max-anchor-sequence): New buffer local variable.
	(w3m-copy-local-variables, w3m-clear-local-variables): Handle
	`w3m-max-anchor-sequence'.
	(w3m-fontify-anchors): Reset `w3m-max-anchor-sequence' to zero.
	Use the text-property `w3m-anchor-sequence' insted of
	`w3m-cursor-anchor'.
	(w3m-goto-next-anchor, w3m-next-anchor, w3m-goto-previous-anchor)
	(w3m-previous-anchor): Rewrite use the text-property
	`w3m-anchor-sequence'.
	(w3m-next-form, w3m-goto-next-image, w3m-next-image)
	(w3m-previous-image): Fix mistake as modified last time.

	* w3m-util.el (w3m-anchor-sequence): New macro.
	(w3m-cursor-anchor) Remove macro.

	* w3m-form.el (w3m-form-fontify): Use the text-property
	`w3m-anchor-sequence' insted of `w3m-cursor-anchor'.

2001-11-21  TSUCHIYA Masatoshi  <tsuchiya@namazu.org>

	* w3m.el (w3m-download-this-url): Wrap the form which is evaluated
	in asynchronous context with `w3m-process-with-null-handler', to
	fix the bug reported by Hideyuki SHIRAI <shirai@meadowy.org>.

	* w3m-xmas.el (w3m-create-image): Modified to avoid calling
	`w3m-process-with-wait-handler'.

2001-11-20  TSUCHIYA Masatoshi  <tsuchiya@namazu.org>

	* w3m-proc.el (w3m-process-push): Set the buffer-local variable
	`w3m-process-object' in the appropriate buffer.
	(w3m-process-sentinel): Removed redundant call of
	`with-current-buffer'.

	* Makefile.in (default): Reintroduce of checking time stamps of
	w3m-util.elc and w3m-proc.elc.

	* w3m-proc.el (w3m-process-temp-file): Abolishded.

	* w3m.el (w3m-content-charset, w3m-content-encoding,
	w3m-content-length, w3m-content-type, w3m-last-modified,
	w3m-real-url): Fixed asynchrounization.
	(w3m-download): Changed the argument spec and the body to accept
	an asynchrounous context.
	(w3m-external-view): Follow change of `w3m-download'.